feat: Implement custom Telegram API client and message deletion
This commit introduces a custom Telegram API client using OkHttp, replacing the `java-telegram-bot-api` dependency. This change provides more control over API interactions and reduces external library dependencies.

Additionally, new functionality for deleting messages has been implemented. The `DeleteMessageEventComponent` now handles the deletion of pending messages stored in the user session context, improving bot interaction flow and message management.

Minor code style improvements were also applied to the `AgentApplication` for lambda expressions.